--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "express": "^4.21.2",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "nodemon": "^3.1.10",
+    "path": "^0.12.7",
     "pg": "^8.15.6",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.3"
-  }
+  },
+  "description": "Підготували: студенти групи ІПЗс-24-2 Вікторія Гринишин, Мирослава Таркані, Анна Погорельцева, Даніїл Ковтунов. Логгер, який звітує про всі активності за зразком: час, ід пристрою, категорія, опис.",
+  "main": "app.js",
+  "author": "",
+  "license": "ISC"
 }
