--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "final-project.-logger",
+  "name": "project",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -24,7 +24,7 @@
     "prettier": "3.5.3",
     "sequelize-cli": "^6.6.3"
   },
-  "description": "Підготували: студенти групи ІПЗс-24-2 Вікторія Гринишин, Мирослава Таркані, Анна Погорельцева, Даніїл Ковтунов. Логгер, який звітує про всі активності за зразком: час, ід пристрою, категорія, опис.",
+  "description": "",
   "main": "app.js",
   "author": "",
   "license": "ISC"
